禁止横屏，新增记录时可以修改单价，修改记录时不可选择型号，工价可以删除，修改图标

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ChargeHelper</string>
+    <string name="app_name">记件助手</string>
     <string name="title_change">记账</string>
     <string name="title_history">历史</string>
     <string name="title_setting">设置</string>
