--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">记件助手</string>
     <string name="title_change">记账</string>
     <string name="title_history">历史</string>
+    <string name="title_analyze">图表</string>
     <string name="title_setting">设置</string>
 
     <string-array name="months">
