工资趋势支持近一年月收入，近一月日收入

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,11 @@
         <item>12 月</item>
     </string-array>
 
+    <string-array name="salary_analyze">
+        <item>近12月月收入</item>
+        <item>近30天日收入</item>
+    </string-array>
+
     <string-array name="sort_item">
         <item>流程卡号</item>
         <item>产品型号</item>
