--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,10 @@
         <item>产品型号</item>
         <item>日期</item>
     </string-array>
+
+    <string-array name="sort_type">
+        <item>升序</item>
+        <item>降序</item>
+    </string-array>
 </resources>
 
